# multiplayer-fps-client

./: .gitignore  Cargo.toml  README.md
src/: game.rs  gui.rs  lights.rs  main.rs  network.rs  objects.rs  player.rs  reader.rs  session.rs
static/models/: .mtl  DCBall.mtl  DCPlayer.mtl  FCGround.mtl  FMStair.mtl  ball.mtl  ground.mtl  none  ring.glb  roscakk.mtl  scene.mtl  space.mtl  untitled.mtl
