[package]
name = "aimclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
deku = "0.16.0"

[dependencies.raylib]
version = "5.0.0"
git = "https://github.com/bitten2up/raylib-rs"
rev = "d790832cc22098b068350b523735e2e8451e9d1f"